...
    }
    
    func show(quiz result: QuizResultsViewModel) {
        let alert = AlertModel(
              title: result.title,
              message: result.text,
              buttonText:  result.buttonText, accessibilityIdentifier: "endingAlert"){[weak self] in
                  
                  guard let self = self else {return}
                  self.presenter.restartGame()
                  
              }
        self.presenter.alertPresenter?.show(with: alert)
...
